# 3DGameMath

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md
apps/Bench/: CMakeLists.txt
apps/Bench/src/: bench.cc
apps/Main/: CMakeLists.txt
apps/Main/src/: main.cc
apps/Renderer/: CMakeLists.txt
apps/Renderer/res/shaders/: hello.shader
apps/Renderer/src/: gl.hpp  index_buffer.cc  index_buffer.h  main.cc  vertex_array.cc  vertex_array.h  vertex_buffer.cc  vertex_buffer.h
apps/Renderer/src/api/gl/: attributes.h  gl.h  shader.h  types.h  uniforms.h
apps/Sandbox/: CMakeLists.txt
apps/Sandbox/src/: main.cc
apps/Sandbox/src/app/: bbox.cc  coord_spaces.cc  euler.cc  invalid_matrix_ctor.cc  matrix.cc  matrix_determinants.cc  matrix_inversion.cc  matrix_orthogonality.cc  matrix_transformation.cc  orientation_conversions.cc  plane.cc  polar_coords.cc  quaternion.cc  rotation_matrix.cc  scale_matrix.cc  slerp.cc  tri.cc  vector_exercises.cc
apps/Test/: .clang-tidy  CMakeLists.txt
apps/Test/src/: test.cc
libs/Math/: CMakeLists.txt
libs/Math/include/math/: _euler_decl.h  _euler_impl.hpp  _matrix_decl.h  _matrix_impl.hpp  _polar_decl.h  _polar_impl.hpp  _quat_decl.h  _quat_impl.hpp  _vector_decl.h  _vector_impl.hpp  assert.h  euler.h  euler.inl.hpp  fmt.h  literals.h  matrix.h  matrix.inl.h  matrix.inl.hpp  polar.h  polar.inl.h  polar.inl.hpp  quat.h  quat.inl.h  quat.inl.hpp  random.h  sfinae.h  spaces.h  transform.h  utility.h  vector.h  vector.inl.h  vector.inl.hpp
libs/Math/include/math/detail/: bitflags.h
libs/Math/include/math/geo/: _aabb_decl.h  _aabb_impl.hpp  _circle_decl.h  _circle_impl.hpp  _plane_decl.h  _plane_impl.hpp  _ray_decl.h  _ray_impl.hpp  _sphere_decl.h  _sphere_impl.hpp  _tri_decl.h  _tri_impl.hpp  aabb.h  circle.h  plane.h  ray.h  sphere.h  tri.h
libs/Math/include/math/matrix/: _rotation_decl.h  _rotation_impl.hpp  _transform_decl.h  _transform_impl.hpp  rotation.h  rotation.inl.h  rotation.inl.hpp  scale.h  transform.h  transform.inl.h  transform.inl.hpp  translation.h
libs/Math/src/math/: literals.cc
libs/Math/src/math/matrix/: rotation.cc  scale.cc  translation.cc
libs/Sized/: CMakeLists.txt
libs/Sized/include/: sized.h
notes/: 03-multiple-coordinate-spaces.md  04-intro-to-matrices.md  04-matrices.md  05-matrices-and-linear-transformations.md  10-graphics.md
